--- a/ClimateControlSystem.csproj
+++ b/ClimateControlSystem.csproj
@@ -115,19 +115,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Components\CreateConfiguration\DeviceConfiguration.xaml.cs">
+      <DependentUpon>DeviceConfiguration.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Components\CreateConfiguration\RoomConfiguration.xaml.cs">
+      <DependentUpon>RoomConfiguration.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Components\Details.xaml.cs">
       <DependentUpon>Details.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Components\DeviceConfiguration.xaml.cs">
-      <DependentUpon>DeviceConfiguration.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\Listing.xaml.cs">
       <DependentUpon>Listing.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\PlaceholderTextBox.cs" />
-    <Compile Include="Components\RoomConfiguration.xaml.cs">
-      <DependentUpon>RoomConfiguration.xaml</DependentUpon>
-    </Compile>
     <Compile Include="di\ClimateControlSystemStore.cs" />
     <Compile Include="di\RadioButtonCheckedConverter.cs" />
     <Compile Include="di\SelectedConditionerStore.cs" />
@@ -135,12 +135,16 @@
     <Compile Include="di\SelectedPurificatorStore.cs" />
     <Compile Include="di\SelectedRoomStore.cs" />
     <Compile Include="Domain\ClimateControlSystemValidator.cs" />
+    <Compile Include="Domain\ConfigurationPathValidator.cs" />
+    <Compile Include="Domain\ICloseWindows.cs" />
     <Compile Include="Domain\RoomValidator.cs" />
+    <Compile Include="Domain\WindowService.cs" />
     <Compile Include="model\Devices\ClimateControlSystemDevice.cs" />
     <Compile Include="model\Devices\Conditioner.cs" />
     <Compile Include="model\Devices\ConditionerMode.cs" />
     <Compile Include="model\Devices\Humidifier.cs" />
     <Compile Include="model\Devices\Purificator.cs" />
+    <Compile Include="model\EnumExtensionMethods.cs" />
     <Compile Include="model\Room\HeatSourceObject.cs" />
     <Compile Include="model\Room\LightLevel.cs" />
     <Compile Include="model\Room\Room.cs" />
@@ -174,19 +178,19 @@
     <Compile Include="ui\Views\RoomDetailsView.xaml.cs">
       <DependentUpon>RoomDetailsView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Components\CreateConfiguration\DeviceConfiguration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Components\CreateConfiguration\RoomConfiguration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Components\Details.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Components\DeviceConfiguration.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Components\Listing.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Components\RoomConfiguration.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -220,7 +224,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="model\ClimateControlSystem.cs" />
-    <Compile Include="di\ConfigurationFactory.cs" />
+    <Compile Include="di\ClimateControlSystemSerializer.cs" />
     <Compile Include="ui\Views\ClimateControlSystemView.xaml.cs">
       <DependentUpon>ClimateControlSystemView.xaml</DependentUpon>
     </Compile>
